Fix multiply and divide operators and screen overflow

--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -15,10 +15,15 @@
     height: 60%;
     font-size: 36px;
     position: relative;
+    overflow-x: scroll;
+    text-overflow: clip;
 }
 
 .Result span {
     position: absolute;
     bottom: 0;
     right: 0;
+    display: inline-block;
+    overflow-x: scroll;
+    text-overflow: clip;
 }
